syntax = "proto3";
package kratos.api;

option go_package = "base-server/internal/conf;conf";

import "google/protobuf/duration.proto";

message Bootstrap {
  Server server = 1;
  Logger logger = 2;
  Data data = 3;
  Auth auth = 4;
  Menus menus = 5;
  Job job = 6;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Logger {
  string level = 1;     // 日志等级 debug、info、warn、error
  string filename = 2;  // 日志路径
  uint32 max_size = 3;    // 单文件最大大小（MB）
  uint32 max_backups = 4; // 保留旧文件数量
  uint32 max_age = 5;     // 保留天数
  bool compress = 6;    // 压缩旧文件
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  Database database = 1;
  Redis redis = 2;
}

message Auth {
  string service_key = 1;
  string api_key = 2;
  string model_path = 3;
  string policy_path = 4;
}

message Menus {
  string default_menus = 1;
}

message Job {
  message JobConfig {
    string name = 1;
    string schedule = 2;
    string input = 3;
    string output = 4;
  }
  repeated JobConfig jobs = 1;
}